# openenv-data-cleaning-env

./: Dockerfile  README.md  app.py  dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/raw/: sample_dataset.json
env/: environment.py  models.py  tasks.py
scripts/: run_baseline.py
server/: app.py
