[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-cleaning-env"
version = "0.1.0"
description = "Data cleaning environment for OpenEnv"
dependencies = [
    "openenv-core>=0.2.0",
    "pandas",
    "numpy"
]

[project.scripts]
server = "server.app:main"